--- a/README
+++ b/README
@@ -1,1 +1,12 @@
 element14 Ultimate Road Test
+
+From the site:
+The Challenge
+ 
+element14 in conjunction with Texas Instruments are pleased to announce the Ultimate RoadTest, a competition which will stretch the capabilities of three highly skilled and creative engineers from across the globe whom element14 has selected to take up the challenge.
+The task is to design and build a working prototype application using existing development tools, software, and design tools (including CadSoft EAGLE) that creates a real-world solution for the Home Automation market. The end application must include functional elements utilizing wireless, sensing, motor control, and lighting.
+The competition will be judged by a panel of experts from Texas Instruments, making the contest not only an opportunity to use leading edge tools, but also a chance to interact with leading figures from one of the top electronics engineering firms.
+ 
+The Judging
+	
+Competitors are required to blog on a weekly basis about the progress of their projects; they are also encouraged to provide videos and other dynamic content to facilitate the judging process. The review of the projects will occur on June 4th. The winner will be the individual who produces a solution which is the most compelling, innovative and indeed, quirky.
